Fix popup button wrap

--- a/client/src/app/map/map.component.scss
+++ b/client/src/app/map/map.component.scss
@@ -173,7 +173,6 @@
     margin-top: 8px;
     display: flex;
     gap: 8px;
-    flex-wrap: wrap;
   }
 
   .saved-location-edit-btn {
